--- a/src/main/resources/templates/Patients.html
+++ b/src/main/resources/templates/Patients.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
+
+
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="p-4">
-<div class="shadow-lg rounded   p-2 bg-white">
-    <h2 class="text-2xl mb-4 w-fit">List des Patients</h2>
-        <table class="table-auto w-full  ">
+<div class="border rounded   p-2 bg-white">
+    <h2 class="text-xl mb-4 w-fit">List des Patients</h2>
+    <table class="table-auto w-full">
         <thead>
-        <tr class="text-left text-gray-600">
+        <tr class="text-left text-gray-600 text-md">
             <th class=" p-2">ID</th>
             <th class=" p-2">NOM</th>
             <th class=" p-2">DATE NAISSANCE</th>
@@ -28,6 +30,25 @@
         </tr>
         </tbody>
     </table>
+    <nav aria-label="Page navigation example" >
+        <ul class="inline-flex -space-x-px  mt-4 mb-4">
+            <li>
+                <a th:href="@{/index(page=${(currentPage - 1)>=0? currentPage - 1:0})}"
+                class="bg-white border border-gray-300 text-gray-500 hover:bg-gray-100 hover:text-gray-700 ml-0 rounded-l-lg leading-tight py-2 px-3 "
+                   th:classappend="${currentPage == 0} ? 'pointer-events-none opacity-50'">Previous</a>
+            </li>
+            <li th:each="page,status:${pages}" >
+                <a th:href="@{/index(page=${status.index})}"
+                   th:class="${currentPage==status.index?'bg-blue-50 border border-gray-300 text-blue-600 hover:bg-blue-100 hover:text-blue-700  py-2 px-3':'bg-white border border-gray-300 text-gray-500 hover:bg-gray-100 hover:text-gray-700 leading-tight py-2 px-3'}"
+                   th:text="${status.index+1}"></a>
+            </li>
+            <li>
+                <a th:href="@{/index(page=${(currentPage + 1) < pages.length ? currentPage + 1 : pages.length - 1})}"
+                   class="bg-white border border-gray-300 text-gray-500 hover:bg-gray-100 hover:text-gray-700 rounded-r-lg leading-tight py-2 px-3 "
+                   th:classappend="${currentPage == pages.length - 1} ? 'pointer-events-none opacity-50'">Next</a>
+            </li>
+        </ul>
+    </nav>
 </div>
 </body>
 </html>
