--- a/src/main/resources/templates/addPatient.html
+++ b/src/main/resources/templates/addPatient.html
@@ -13,19 +13,19 @@ layout:decorate="template1" >
 <body class="p-4">
 <div class="border rounded bg-white mx-auto container px-6 py-2 my-6" layout:fragment="content">
     <h2 class="text-xl mb-4 w-fit">Add Patient</h2>
-    <form th:action="@{save}"  method="post">
+    <form th:action="@{save}" th:object="${patient}"  method="post">
 
 
-        <input name="name" type="text" placeholder="name" th:value="${patient.nom}"  class="block px-2 py-1 my-2 border rounded bg-white w-1/3 max-lg:w-full">
-        <span th:errors="${patient.nom}"></span>
-        <input name="birth_date" type="date" placeholder="birth date" th:value="${patient.dateNaissance}" class="block px-2 py-1 my-2 border rounded bg-white  w-1/3 max-lg:w-full">
-        <span th:errors="${patient.dateNaissance}"></span>
-        <input name="score" type="number" placeholder="score" th:value="${patient.score}" class="block px-2 py-1 my-2 border rounded bg-white  w-1/3 max-lg:w-full">
-        <span th:errors="${patient.score}"></span>
+        <input name="name" type="text" placeholder="name" th:field="*{nom}" th:value="${patient.nom}"  class="block px-2 py-1 my-2 border rounded bg-white w-1/3 max-lg:w-full">
+        <span class="text-red-500" th:errors="${patient.nom}"></span>
+        <input name="birth_date" type="date" placeholder="birth date" th:field="*{dateNaissance}" th:value="${patient.dateNaissance}" class="block px-2 py-1 my-2 border rounded bg-white  w-1/3 max-lg:w-full">
+        <span class="text-red-500" th:errors="${patient.dateNaissance}"></span>
+        <input name="score" type="number" placeholder="score" th:field="*{score}" th:value="${patient.score}" class="block px-2 py-1 my-2 border rounded bg-white  w-1/3 max-lg:w-full">
+        <span class="text-red-500" th:errors="${patient.score}"></span>
 
         <div class="flex items-start justify-between  w-fit space-x-2">
             <label for="sick" >sick</label>
-            <input id="sick" name="sick" type="checkbox" placeholder="sick" th:value="${patient.malade}" class="px-2 py-1 my-2 border rounded bg-white ">
+            <input id="sick" name="sick" type="checkbox" placeholder="sick" th:field="*{malade}" th:value="${patient.malade}" class="px-2 py-1 my-2 border rounded bg-white ">
         </div>
 
         <button type="submit" class="block px-2 py-1 my-2 border rounded bg-blue-500 text-white space-x-2 "><i class="fas fa-save"></i><span>save</span> </button>
